# iglsynth-cmake

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  setup.py
include/: Player.h  binding_test.h
src/: Player.cpp  binding_test.cpp
